<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.openweatherapp.data.model.WeatherResponse" />

        <variable
            name="viewModel"
            type="com.example.openweatherapp.presentation.ui.weather.WeatherViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/detail_background">

            <TextView
                android:id="@+id/tv_city_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_24"
                app:cityAndCountry="@{model}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Amsterdam, NL" />

            <TextView
                android:id="@+id/tv_weather_condition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                app:description="@{model}"
                app:layout_constraintEnd_toEndOf="@+id/tv_city_country"
                app:layout_constraintStart_toStartOf="@+id/tv_city_country"
                app:layout_constraintTop_toBottomOf="@id/tv_city_country"
                tools:text="broken cloud" />

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_60"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_weather_condition"
                app:tempToDegree="@{model.main.temp}"
                tools:text="33" />

            <TextView
                android:id="@+id/temperature_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_temperature"
                app:temperatureDescription="@{model}"
                tools:text="33" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />

            <ImageView
                android:id="@+id/iv_weather_condition"
                android:layout_width="@dimen/dp_90"
                android:layout_height="@dimen/dp_90"
                android:contentDescription="@string/description_weather_condition_icon"
                android:scaleType="centerCrop"
                app:displayImage="@{model}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/tv_temperature" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.loading}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/unknown_error"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                app:layout_constraintTop_toBottomOf="@id/iv_weather_condition">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_value_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <TextView
                    android:id="@+id/tv_humidity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/label_humidity"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/iv_humidity"
                    app:layout_constraintStart_toStartOf="@+id/iv_humidity"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_humidity"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_8"
                    android:contentDescription="@string/label_humidity"
                    android:src="@drawable/ic_humidity"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_humidity_label" />

                <TextView
                    android:id="@+id/tv_humidity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@{@string/percentage_text(model.main.humidity)}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="@+id/iv_humidity"
                    app:layout_constraintStart_toStartOf="@+id/iv_humidity"
                    app:layout_constraintTop_toBottomOf="@+id/iv_humidity"
                    tools:text="70%" />

                <TextView
                    android:id="@+id/tv_pressure_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/label_pressure"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/iv_pressure"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/iv_pressure"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_pressure"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:contentDescription="@string/label_pressure"
                    android:src="@drawable/ic_pressure"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pressure_label" />

                <TextView
                    android:id="@+id/tv_pressure_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@{@string/pressure_text(model.main.pressure)}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="@+id/iv_pressure"
                    app:layout_constraintStart_toStartOf="@+id/iv_pressure"
                    app:layout_constraintTop_toBottomOf="@id/iv_pressure"
                    tools:text="1001 mBar" />

                <TextView
                    android:id="@+id/tv_visibility_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/label_visibility"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/iv_visibility"
                    app:layout_constraintStart_toStartOf="@+id/iv_visibility"
                    app:layout_constraintTop_toBottomOf="@id/tv_humidity_value" />

                <ImageView
                    android:id="@+id/iv_visibility"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_8"
                    android:contentDescription="@string/label_visibility"
                    android:src="@drawable/ic_visibility"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_visibility_label" />

                <TextView
                    android:id="@+id/tv_visibility_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@{@string/km_text(model.visibility)}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="@+id/iv_visibility"
                    app:layout_constraintStart_toStartOf="@+id/iv_visibility"
                    app:layout_constraintTop_toBottomOf="@id/iv_visibility"
                    tools:text="4 km" />

                <TextView
                    android:id="@+id/tv_wind_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/label_wind"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/iv_wind"
                    app:layout_constraintStart_toStartOf="@+id/iv_wind"
                    app:layout_constraintTop_toBottomOf="@id/tv_pressure_value" />

                <ImageView
                    android:id="@+id/iv_wind"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:contentDescription="@string/label_wind"
                    android:src="@drawable/ic_wind"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_wind_label" />

                <TextView
                    android:id="@+id/tv_wind_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@{@string/kmph_text(model.wind.speed)}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="@+id/iv_wind"
                    app:layout_constraintStart_toStartOf="@+id/iv_wind"
                    app:layout_constraintTop_toBottomOf="@id/iv_wind" />

                <TextView
                    android:id="@+id/tv_sunrise_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/label_sunrise"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@id/iv_sunrise"
                    app:layout_constraintStart_toStartOf="@id/iv_sunrise"
                    app:layout_constraintTop_toBottomOf="@id/tv_wind_value" />

                <ImageView
                    android:id="@+id/iv_sunrise"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_8"
                    android:contentDescription="@string/label_sunrise"
                    android:src="@drawable/ic_sun_rise"
                    app:layout_constraintEnd_toStartOf="@id/iv_sunset"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_sunrise_label" />

                <TextView
                    android:id="@+id/tv_sunrise_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="@id/iv_sunrise"
                    app:layout_constraintStart_toStartOf="@id/iv_sunrise"
                    app:layout_constraintTop_toBottomOf="@+id/iv_sunrise"
                    app:timeText="@{model.sys.sunrise}"
                    tools:text="5:11 AM" />

                <TextView
                    android:id="@+id/tv_sunset_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/label_sunset"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@id/iv_sunset"
                    app:layout_constraintStart_toStartOf="@id/iv_sunset"
                    app:layout_constraintTop_toBottomOf="@id/tv_wind_value" />

                <ImageView
                    android:id="@+id/iv_sunset"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:contentDescription="@string/label_sunset"
                    android:src="@drawable/ic_sun_set"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_sunrise"
                    app:layout_constraintTop_toBottomOf="@+id/tv_sunset_label" />

                <TextView
                    android:id="@+id/tv_sunset_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="@id/iv_sunset"
                    app:layout_constraintStart_toStartOf="@id/iv_sunset"
                    app:layout_constraintTop_toBottomOf="@+id/iv_sunset"
                    app:timeText="@{model.sys.sunset}"
                    tools:text="6:47 PM" />

                <TextView
                    android:id="@+id/tv_date_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16"
                    app:dateTimeText="@{model.dt}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_sunset_time"
                    tools:text="26 May, 2022 1:13 PM" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>

